# js0-grpc

./: .gitignore  README.md  README.mdt  api.proto  dist.sh  new.sh  package.json
_tmpl/: README.md  build.sh  package.json
_tmpl/.gemini/: settings.json
js0.site/: README.md  build.sh  minify.js  note.md  package.json  test.sh
js0.site/readme/: en.md  zh.md
js0.site/src/: D.js  E.js  f.js  throttle.js  ~.js
js0.site/test/: main.js
js0.site/test/proto/: bundle.js  bundle.md  data.js  debug.js  decode.js  encode.js  test.sh
js0_grpc/: _.proto
proto/: AGENTS.md  README.mdt  build.sh  feature.md  minify.js  package.json  test.sh  type.md
proto/src/: D.js
proto/test/: bundle.md  data.js  debug.js  decode.js  encode.js
proto/test/demo/: test.proto
proto/test/demo/test/: D.js  (+3 more)
proto2js/: README.md  README.mdt  build.sh  init.sh  package.json  test.sh
proto2js/readme/: en.md  zh.md
proto2js/src/: .gitignore  cli.js  findType.js  gen.js  importLi.js  lib.js  merge.js
proto2js/test/: .gitignore  gen.js
proto2js/test/demo/: test.proto  test0.proto
readme/: en.md  zh.md
rs2proto/: README.md  build.sh  package.json  test.sh  todo.md
rs2proto/src/: cli.js  funcIdMap.coffee  gen.coffee  genJs.coffee  genProto.coffee  genVolo.coffee
rs2proto/src/rs/: EMPTY.js  genAdapter.coffee  mod.coffee  primitiveType.coffee  return2rs.coffee  srcLib.coffee  tupleType.coffee  type2proto.coffee
rs2proto/test/js0_test/: Cargo.toml  funcId.yml
rs2proto/test/js0_test/src/: auth.rs  lib.rs  rm.rs
rs2proto/test/js0_test/src/admin/: user.rs
sh/: verNext.js
(+8 files in other folders)
